<resources>
    <string name="app_name">secIt</string>
    <string name="not_a_user_register">Not a user? Register</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>


    <string name="Secure_Credentials">Secure Credentials</string>

    <string name="Signup">Signup</string>
    <string name="Signin">Signin</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="alertdialog_hint">Enter Aadhaar Number</string>
    <string name="title_activity_navigation">Navigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_profile">Profile</string>
    <string name="action_document">My Document</string>
    <string name="action_new_document">New Document</string>
    <string name="action_history">History</string>
    <string name="mail_id">admin@mail.com</string>
    <string name="mail_user">user@mail.com</string>
    <string name="user_name">user_name</string>
    <string name="title_activity_user_navigation">user_navigation</string>
    <string name="action_settings">Settings</string>

    <string name="mobile.no">Enter mobile No.</string>
    <string name="verify_otp">verify OTP</string>
    <string name="username">Enter Username</string>
    <string name="password">Enter password</string>
</resources>
