<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_profile"
        android:orderInCategory="100"
        android:title="@string/action_profile"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_document"
        android:orderInCategory="100"
        android:title="@string/action_document"
        app:showAsAction="never">

    </item>
    <item
        android:title="@string/action_new_document"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:id="@+id/action_new_documnet">

    </item>
    <item
        android:id="@+id/action-history"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/action_history"></item>

</menu>
