<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".New_login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:background="@drawable/background"></LinearLayout>

    <ImageView
        android:id="@+id/logonew"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:src="@drawable/logo"/>
    <TextView
        android:id="@+id/logoname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logonew"
        android:textAlignment="center"
        android:layout_margin="20dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/Secure_Credentials"
        android:contentDescription="logo_description"/>

  <Button
      android:id="@+id/newsignin"
      android:layout_width="200dp"
      android:layout_height="50dp"
      android:text="@string/Signin"
      android:background="@drawable/button_click"
      android:layout_centerHorizontal="true"
      android:layout_below="@+id/logoname"
      android:layout_marginBottom="20dp"
      android:layout_marginTop="90dp"
      android:textColor="@color/QRcolorW"
      />
    <Button
        android:id="@+id/newsignup"
        android:layout_width="200dp"
        android:text="@string/Signup"
        android:textColor="@color/QRcolorW"
        android:layout_height="50dp"
        android:background="@drawable/button_click"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/newsignin"
        android:layout_marginBottom="20dp"
        />
    

</RelativeLayout>